# undertale-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UndertaleCpp.sln  UndertaleCpp.vcxproj  UndertaleCpp.vcxproj.filters  build.zig  build.zig.zon  conanfile.txt  config-debug.bat  config-release.bat  config.bat  config_debug.bat  config_release.bat  libs.txt  premake5.lua
coal_engine/: coal_engine.h  engine.cpp  engine.h  enpch.h  main.cpp
coal_engine/core/: assertions.h  base.h  platform_detection.h
coal_engine/core/components/: transform.cpp  transform.h
coal_engine/core/events/: engine_event.h  event.h  key_event.h  mouse_event.h  window_event.h
coal_engine/core/input/: input.cpp  input.h  key_codes.h  mouse_codes.h
coal_engine/core/logging/: logger.cpp  logger.h
coal_engine/core/math/: math.h
coal_engine/core/os/: random.cpp  random.h  time.cpp  time.h
coal_engine/core/rendering/: buffers.cpp  buffers.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  renderer.cpp  renderer.h  rendering_api.cpp  rendering_api.h  shader.cpp  texture.cpp  texture.h  viewport.cpp  viewport.h  window.cpp  window.h
coal_engine/core/rendering/layers/: layer.h  layer_stack.h
coal_engine/core/scenes/: scene_layer.cpp  scene_layer.h
coal_engine/entities/rendering/: texture_renderer.cpp  texture_renderer.h
coal_engine/imgui/: imgui_layer.cpp  imgui_layer.h
coal_engine/utility/: string_utility.cpp  string_utility.h
coal_engine_editor/: engine_editor.cpp
coal_engine_editor/editor_gui/: editor_layer.cpp  editor_layer.h  game_view_window.cpp  game_view_window.h  log_window.cpp  log_window.h
coal_engine_player/: engine_player.cpp  player_layer.cpp  player_layer.h
res/layouts/: default.ini
res/shaders/: basic.shader  default.shader  main_framebuffer.glsl  quad.glsl
src/: engine.cpp  engine.h  enpch.cpp  enpch.h  main.cpp  undertale.h
src/core/: base.h
src/core/assets/: asset.cpp  asset.h  asset_database.cpp  asset_database.h
src/core/camera/: camera.cpp  camera.h
src/core/components/: transform.cpp  transform.h
src/core/logging/: console_color.h  log_window.cpp  log_window.h  logger.cpp  logger.h
src/core/os/: time.cpp  time.h
src/core/rendering/: buffers.cpp  buffers.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  rendering_api.cpp  rendering_api.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h  window.cpp  window.h
src/core/rendering/layers/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
src/editor/: editor_layer.cpp  editor_layer.h  game_view_window.cpp  game_view_window.h
src/entities/rendering/: texture_renderer.cpp  texture_renderer.h
src/imgui/: imgui_layer.cpp  imgui_layer.h
src/main/: engine.cpp  engine.h  main.cpp
src/platform/opengl/: opengl_error_handler.cpp  opengl_error_handler.h
src/utility/: open_gl_handler.cpp  open_gl_handler.h  string_utility.cpp  string_utility.h
